rollout.yaml
---
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: nginx-demo
  labels:
    app: nginx-demo
spec:
  replicas: 10
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: nginx-demo
  template:
    metadata:
      labels:
        app: nginx-demo
    spec:
      containers:
        - name: nginx-demo
          image: "martijnvantiel/helloworld:latest"
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
  strategy:
     canary: 
       steps:
       - setWeight: 20
       - pause: {}
