ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-demo
  annotations:
    ingress.kubernetes.io/proxy-body-size: 100M
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/app-root: "/"
spec:
  rules:
  - host: hello.apps.os-test.novalocal
    http:
      paths:
      - path: /hello-world
        backend:
          serviceName: nginx-demo
          servicePort: 80
